# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/ft_build/ark_config.gni")
import("//build/gn/fangtian.gni")

group("ets_frontend_build") {
  deps = [
    #"../es2panda/ft_build:es2panda_build",
    "../ts2panda/ft_build:ark_ts2abc_build",
    "../merge_abc/ft_build:merge_proto_abc_build",
  ]
}
