# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# for js-loader
ohos_prebuilt_executable("js_js2abc_api8_linux") {
  source = "./api8/bin/linux/js2abc"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_executable("js_js2abc_api8_win") {
  source = "./api8/bin/win/js2abc.exe"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_executable("js_js2abc_api8_mac") {
  source = "./api8/bin/mac/js2abc"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_ts2abc_api8_linux") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_ts2abc_api8_win") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_ts2abc_api8_mac") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package_api8_linux") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package_api8_win") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package_api8_mac") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package-lock_api8_linux") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package-lock_api8_win") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("js_package-lock_api8_mac") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

# for ets-loader
ohos_prebuilt_executable("ets_js2abc_api8_linux") {
  source = "./api8/bin/linux/js2abc"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_executable("ets_js2abc_api8_win") {
  source = "./api8/bin/win/js2abc.exe"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_executable("ets_js2abc_api8_mac") {
  source = "./api8/bin/mac/js2abc"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_ts2abc_api8_linux") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_ts2abc_api8_win") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_ts2abc_api8_mac") {
  source = "./api8/src/index.js"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package_api8_linux") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package_api8_win") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package_api8_mac") {
  source = "./api8/package.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package-lock_api8_linux") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package-lock_api8_win") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

ohos_prebuilt_etc("ets_package-lock_api8_mac") {
  source = "./api8/package-lock.json"
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}
